@@ -1,3 +1,6 @@
+* Fri Jun 03 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 2.8.0
+- Update from camptocamp/systemd to puppet/systemd
+
 * Wed Jun 16 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 2.7.0
 - Removed support for Puppet 5
 - Ensured support for Puppet 7 in requirements and stdlib
